translated 4th chapter to kg

--- a/assets/languages/ky-KG.json
+++ b/assets/languages/ky-KG.json
@@ -601,7 +601,98 @@
   "c3_8text3":"\n\nЖаңы төрөлгөн ымыркайларда ВИЧ-инфекциясын өз убагында аныктоо эрте мөөнөттө дарылоону дайындоо, эмдөөлөрдү пландаштыруу жана баланы эмдөө, инфекциялардын алдын алуу үчүн башка дарыларды (котримоксазол) дайындоо үчүн маанилүү.",
 
   "c3_9text1":"Ымыркайга өз убагында, туура дарылоо дайындалганда анын вирустук жүгү аныкталбаган деңгээлге түшүп, бала физикалык жана акыл-эс жактан жакшы өнүгүп, теңтуштарынан эч артта калбайт.",
-  "c3_9text2":"Балаңыздын ден соолукка жана жашоого укугу бар. Кош бойлуу кезде АРТ дарыларын ичүүнү чечкенде, балаңыз жөнүндө; төрөттөн кийин балаңызга АРВ дарыларын берүү жөнүндө; дарылануу режимин туура сактоо жөнүндө; балаңызды ВИЧке өз убагында текшертип туруу жөнүндө ойлонуңуз."
+  "c3_9text2":"Балаңыздын ден соолукка жана жашоого укугу бар. Кош бойлуу кезде АРТ дарыларын ичүүнү чечкенде, балаңыз жөнүндө; төрөттөн кийин балаңызга АРВ дарыларын берүү жөнүндө; дарылануу режимин туура сактоо жөнүндө; балаңызды ВИЧке өз убагында текшертип туруу жөнүндө ойлонуңуз.",
 
+
+  "c4_text1": "ВИЧ-инфекциясы бар адамдарда спецификалык жугуштуу оорулар оппортунисттик инфекциялар (ОИ) деп аталат.",
+  "c4_text2": "ВИЧ менен жашаган адамдарды дарылап, багуу кызматтарын көрсөтүү процесине тартылган адистер зарылчылык жаралганда (эгерде СД4 лимфоциттеринин саны 500 клеткадан аз болсо) мүмкүн болушунча эртерээк АРТны баштоо үчүн болгон күч-аракеттерин жумшашы керектигин эстен чыгарбоо керек.",
+
+  "c4_1text1":"Оппортунисттик илдеттер (ОИ)",
+  "c4_1text2":"Оппортунисттик илдеттер (ОИ) – бул иммунитет төмөндөгөндө гана күч алган өзгөчө оорулар. Адамдын иммундук жетишсиздигинин вирусу (ВИЧ) иммундук системанын клеткаларын өлтүрөт, мунун натыйжасында иммунитет төмөндөйт жана иммундук системасы күчтүү адамдарда пайда болбогон оппортунисттик илдеттер кошулат.",
+  "c4_1text3":"\n\nИммундук клеткалардын – СД4 лимфоциттеринин саны иммундук системанын абалынын негизги көрсөткүчү болуп саналат. СД4 саны 1 микролитр канда 350 клеткадан төмөн болгону иммунитет олуттуу начарлаганын жана оппортунисттик илдеттердин пайда болуу тобокелдиги жогору экенин көрсөтүп турат.",
+  "c4_1text4":"\n\nОппортунисттик илдеттердин ичинен эң кеңири таралгандары – бул кургак учук, пневмоцистикалык пневмония, токсоплазмоз, Капоша саркомасы (тери рагы), грибоктук инфекциялар жана башкалар.",
+
+  "c4_2text1":"ОИнин негизги белгилери:",
+  "c4_2text2":"ОИнин белгилери жана пайда болуу мөөнөтү ар бир адамда ар кандай болот. Иммунитети жакшы абалда болгон ВИЧке чалдыккан адамда оппортунисттик илдеттер болбойт же жеңил түрүндө өтүп кетет. Негизги белгилери:",
+  "c4_2text3":"\n – адам дайыма өзүн алсыз сезе берет, катуу чарчайт;",
+  "c4_2text4":"\n - лимфа бездери шишип турат;",
+  "c4_2text5":"\n – адам салмак таштайт (катуу арыктайт);",
+  "c4_2text6":"\n – дене табы көтөрүлүп турат;",
+  "c4_2text7":"\n - адам түнкүсүн көп тердейт;",
+  "c4_2text8":"\n - адамдын башы тынбай ооруйт;",
+  "c4_2text9":"\n - адам жөтөлүп, дем ала албай кыйналат;",
+  "c4_2text10":"\n - стоматит (ооздун былжыр чели сезгенип, жара чыгат); ",
+  "c4_2text11":"\n - дем алуу органдарынын оорулары (ангина, отит, синусит);",
+  "c4_2text12":"\n - теринин жаралары (герпес, чакалай, тырмакгрибогу, ж.б.).",
+
+  "c4_3text1":"Оппортунисттик илдеттер эмнеси менен коркунучтуу?",
+  "c4_3text2":"Иммундук жетишсиздик өнүккөн учурда оппортунисттик илдеттер  ВИЧ-менен жашаган адамдардын ден соолугуна олуттуу сокку урушу мүмкүн. Кээ бир инфекциялар ВИЧке чалдыккан адамдарда гана пайда болушу ыктымал (мисалы, токсоплазмоз), башка оорулар болсо ВИЧ менен айкалышканда өтө оор өтөт (мисалы, кургак учук). Оппортунисттик илдеттер ВИЧ менен жашаган адамдардын өлүмүнүн негизги себеби болуп саналат",
+
+  "c4_4text1":"ОИнин өнүгүшүн кантип алдын алуу керек?",
+  "c4_4text2":"ВИЧ-инфекциясын АРВ препараттары менен дарылоону эрте мөөнөттө баштоо, терапияны бекем кармануу ОИнин алдын алуунун негизги ыкмасы болуп саналат.",
+  "c4_4text3":"\n\nНачар тамактануу, уктоо жана эс алуу режиминин бузулушу, спирт ичимдиктерин жана баңгизаттарды колдонуу иммунитеттин төмөндөшүнө алып келип, ОИнин өнүгүү тобокелдигин жогорулатат.",
+  "c4_4text4":"\n\nЖаныбарлар менен контакт, кайнатылбаган сүттү, чийки жумуртканы же чала бышырылган этти тамак-ашка колдонуу; жугуштуу оорулары бар адамдар менен байланышуу; корголбогон жыныстык катнаш оппортунисттик ооруларды жуктуруу тобокелдигин жогорулатат.",
+
+  "c4_5text1":"Ден соолукту сактоо үчүн эмнелер керек:",
+  "c4_5text2":"\n- ичеги ооруларын алдын алуу үчүн бөтөлкөдөгү же кайнатылган сууну ичиш керек;",
+  "c4_5text3":"\n- жугуштуу оорулары бар адамдардан алыс болуп, колду тез-тез жана туура жууп туруш керек; коомдук жайларда же оорулуу адамдар менен байланышта болгондо беткап тагынуу зарыл;",
+  "c4_5text4":"\n- бөлмөнү желдетүү, өздүк гигиенаны сактоо зарыл (колду жана денени таза кармаш керек); таза абада үзгүлтүксүз сейилдеп туруу зарыл;",
+  "c4_5text5":"\n- ВИЧке чалдыккан аялдар жыл сайын гинекологиялык текшерүүдөн өтүшү керек, бул онкологиялык оорулардын алдын алат же ракты өз убагында аныктоого жардам берет.",
+  "c4_5text6":"\n- стресстен, алкоголдук ичимдиктерден, никотинден жана баңгизаттардан алыс болуңуз;",
+  "c4_5text7":"\n- балдар жана чоңдор дарыгердин дайындаган эмдөөлөрдөн өтүп турууга тийиш. Эмдөө инфекциялардан коргоого жардам берет;",
+  "c4_5text8":"\n- жыныстык катнаш учурунда дайыма презерватив колдонуш керек",
+  "c4_5text9":"\n\nОппортунисттик инфекциялар иммунитет начарлаганда пайда болот.",
+  "c4_5text10":"Ошондуктан, СД4 клеткаларынын санын текшерип, СД4 төмөн деңгээлде болгондо илдеттердин алдын алуу  үчүн дарыларды өз убагында ичип туруу маанилүү.",
+
+  "c4_6text1":"ВИЧ менен ооруган адамдарда кургак учук",
+  "c4_6text2":"\n\nВИЧ менен ооруган адамдарда кургак учук кантип өтөт?",
+  "c4_6text5":"\n Кургак учук ВИЧ-инфекциясында негизги оппортунисттик илдеттердин бири болуп саналат, буга иммунитеттин төмөндөшү себепчи. ВИЧке чалдыккан адамдарда кургак учук өтө оор өтөт (СД4 саны 200 клеткадан аз болгондо)",
+  "c4_6text4":"\n\nВИЧ менен ооруган адамдарда кургак учук кантип өтөт?",
+  "c4_6text3":"\n Кургак учук – бул кургак учук менен ооруган адамдан соо адамга жөтөлгөндө, чүчкүргөндө, сүйлөшкөндө жуккан оору. Кургак учукту тамак-аш аркылуу (кайнатылбаган сүттөн, чийки жумурткадан, чала бышпаган эттен) да жуктуруп алса болот. Кургак учук ВИЧ менен жашаган адамдардын өлүмүнө себепчи болгон оорулардын бири.",
+
+  "c4_7text1":"   ВИЧ менен ооруган адамдарда кургак учук кантип өтөт?",
+  "c4_7text2":"\n\nКургак учуктун эң кеңири тараган көрүнүштөрүнө төмөнкүлөр кирет:",
+  "c4_7text3":"\n- эки жума же андан ашык убакытка созулган жөтөл; \n- кан жөткүрүү (какырганда же жөтөлгөндө кан пайда болот); \n- оор дем алуу (ынтыгып дем алуу); \n- салмак таштоо (арыктоо); \n- дене табынын жогорулашы (37 ͦС - 37,5 ͦС жана андан жогору); \n- түнкүсүн катуу тердөө; \n- чарчап-чалдыгуу; \n- лимфа бездеринин шишип кетиши.",
+  "c4_7text4":"\n\n Эгерде ВИЧке чалдыккан адамда бул көрүнүштөрдүн жок дегенде бири бар болсо, анда чукул арада дарыгерге кайрылуу керек. Фтизиатр консультация берип, рентгенологиялык жана лабораториялык текшерүү жүргүзүлөт.",
+
+  "c4_8text1":"ВИЧке чалдыккан адамдарда кургак учукту дарылоо",
+  "c4_8text2":"\n\n Кургак учукту токтоосуз дарылай башташ керек. Толук дарылоо курсун аяктоо жана дарыгердин көрсөтмөлөрүн так аткаруу өтө маанилүү.",
+  "c4_8text3":"\n  Көңүл буруңуз: кургак учукту айыктырса болот!",
+  "c4_8text4":"Адам оору аныкталган учурдан тартып толук айыкканга чейин дарылоо режими сактап, дарыгер менен байланышта болуп, өз убагында лабораториялык текшерүүдөн өтүп, күнүмдүк баарлашууда жакындарына кургак учукту жуктуруп албоо үчүн байланыштарды чектеши керек.",
+  "c4_8text5":"\n Кургак учук аныкталганда алгач ушул ооруну дарылашат, андан кийин (2 аптанын ичинде) АРВ терапиясы кошулат.",
+  "c4_8text6":"\n ВИЧ бар адамдарда кургак учук менен ооруп калуу тобокелдиги жогору, ушундан улам бардык ВИЧ менен жашаган адамдарга изониазид менен профилактикалык дарылоо дайындалат, аны 6 ай бою ичиш керек.",
+  "c4_8text7":"\n\nЭмне үчүн котримаксазолду ичүү керек?",
+  "c4_8text8":"\n\nКургак учук ВИЧ-инфекциясы менен айкалышканда, бейтаптарга котримаксазол да жазылат. Бул болсо эң кеңири тараган оппортунисттик илдеттердин бири – пневмоцистикалык пневмониянын өнүгүшүн алдын алат.",
+
+  "c4_9text1":"Вирустук гепатит деген эмне?",
+  "c4_9text2":"\n\nБоор организмде маанилүү функцияларды аткарат. Гепатит – вирустардын, химиялык заттардын, алкоголдук ичимдиктин натыйжасында боордун сезгениши.",
+  "c4_9text3":"\n\nВ жана С вирустук гепатиттери өзгөчө коркунучтуу болуп саналат. Алардын негизги белгиси – сарык (теринин, көздүн чел кабыгынын, зааранын саргайышы), боордун чоңоюшу, ичтин оорушу, уйкусуздук, тез эле чарчап калуу, арыктоо, табиттин начарлашы, жүрөк айлануу. С гепатити билинбей өтүшү мүмкүн, бирок оор кесепеттерге алып келет (аны “мээримдүү өлтүргүч” деп да атап коюшат).",
+  "c4_9text4":"\n\nАдамдар В жана С гепатитин, ошондой эле ВИЧти кан аркылуу (көбүнчө булганган ийнелерди менен шприцтерди колдонгондо) жугузуп алышат.Ошондуктан, ВИЧке чалдыккандардын көбү В жана С гепатитин да жуктуруп алышкан.",
+  "c4_9text5":"\n\nВ гепатитин жуктуруп алуу тобокелдиги ВИЧти жуктуруп алганга караганда бир топ жогору. В гепатитинин вирусу айлана-чөйрөгө абдан туруктуу келет. Бул вирусту сүлгүнү, устараны чогуу колдонгондо же жыныстык катнаш аркылуу жуктуруп алса болот. ",
+
+  "c4_10text1":"Вирустук гепатитти кантип аныктоого болот?",
+  "c4_10text2":"\n\nВИЧ-инфекциясы аныкталгандан кийин ошол замат адам В жана С гепатитине текшерилет. ",
+  "c4_10text3":"\n\nЭгер ВИЧке чалдыккан адам кооптуу жүрүм-турумун уланта берсе (ар кайсы жыныстык өнөктөштөр менен презерватив колдонбостон катнашка барса, башка баңгилер менен ийнени чогуу колдонсо), анда жыл сайын текшерүүдөн өтүп турат.",
+  "c4_10text4":"\n\nВирустук гепатиттин белгилери байкалган учурда дароо дарыгерге кайрылып, текшерилип, дарыланыңыз",
+  "c4_10text5":"\n\nӨзүңүздү вирустук гепатиттен кантип коргой аласыз?\n\n",
+  "c4_10text6":"В, С вирустук гепатиттеринин алдын алуу ВИЧ-инфекциясын алдын алууга окшош.",
+  "c4_10text7":"\n- Баңгизат колдонууда ийнени венага сайгандан баш тартыңыз же өзүңүзгө гана таандык болгон ийнени жана баңгизат даярдоо үчүн шаймандарды колдонуңуз.",
+
+  "c4_11text1":"\n- Жыныстык катнаш учурунда дайыма презервативди туура колдонуңуз.",
+  "c4_11text2":"\n- Өзүңүзгө гана таандык болгон жеке гигиеналык каражаттарды колдонуңуз (тиш щеткасы, устара, сүлгү ж.б.)",
+  "c4_11text3":"\n- Татуировка же пирсинг жасатканда бир жолу колдонулуучу (стерилдүү) аспаптарды колдонуңуз.",
+  "c4_11text4":"\n- Эмдөө В гепатитинен коргойт, ВИЧ менен жашаган адамдар аны акысыз ала алат.",
+  "c4_11text5":"\n\nВирустук гепатит менен кантип жашаш керек?",
+  "c4_11text6":"\nВ жана С вирустук гепатиттерин сөзсүз түрдө дарылаш керек – дарылоосуз кесепеттери оор болот (цирроз же боордун рагы).",
+  "c4_11text7":"\n\nВИЧ менен жашаган адамдар С гепатитинен акысыз дарыланат, ",
+  "c4_11text8":"адамдардын 90%дан ашыгы бул оорудан айыгып кетет. Дарылоо курсу 3-6 айга созулат.",
+  "c4_11text9":"\n\nОшондой эле В гепатити үчүн да дарылоо каралган, бирок ал узак убакытты талап кылат. Кээ бир АРВ препараттары (тенофовир, ламивудин, эмтрицитабин) В гепатитин дарылоого жардам берет.",
+
+  "c4_12text1":"Гепатит менен ооругандар үчүн сунуштар:",
+  "c4_12text2":"\n- ашыкча физикалык көнүгүүлөрдү чектеп, күн тартибин сактаңыз;",
+  "c4_12text3":"\n- баңгизаттардан, алкоголдук ичимдиктерден, тамекиден баш тартыңыз (же абдан азайтыңыз);",
+  "c4_12text4":"\n- кээ бир тамактардан (майлуу, куурулган, ачуу) баш тартыңыз;",
+  "c4_12text5":"\n- жыныстык өнөктөшүңүзгө жана үй-бүлө мүчөлөрүңүзгө ооруңуз жөнүндө, ошондой эле коопсуздук чаралары жөнүндө маалымат берип, аларды сактаңыз.",
+  "c4_12text6":"\n- Кошумча маалыматты, текшерүү, алдын алуу жана дарылоо маселелерин дарыгериңиз менен талкуулаңыз"
 
 }
