--- a/assets/languages/ru-RU.json
+++ b/assets/languages/ru-RU.json
@@ -600,7 +600,99 @@
   "c3_8text3":"\n\nСвоевременное выявление ВИЧ-инфекции у новорожденных детей важно для раннего начала лечения, планирования и проведения прививок, назначения других препаратов (котримоксазол) для профилактики инфекций. ",
 
   "c3_9text1":"Ребенок, которому своевременно назначено, правильно проводится лечение и достигается неопределяемая вирусная нагрузка, хорошо развивается физически и умственно, и ни в чем не отстает от сверстников.",
-  "c3_9text2":"Ваш ребенок имеет право на здоровье и жизнь. Думайте о своем ребенке, когда Вы принимаете решение о приеме АРТ во время беременности; о приеме АРВ-препаратов ребенком после родов; о правильном соблюдении режима лечения; о своевременном обследовании ребенка на ВИЧ."
+  "c3_9text2":"Ваш ребенок имеет право на здоровье и жизнь. Думайте о своем ребенке, когда Вы принимаете решение о приеме АРТ во время беременности; о приеме АРВ-препаратов ребенком после родов; о правильном соблюдении режима лечения; о своевременном обследовании ребенка на ВИЧ.",
+
+
+  "c4_text1": "Специфические инфекционные заболевания у людей с ВИЧ называют оппортунистическими инфекциями (ОИ).",
+  "c4_text2": "Важно помнить, что специалистам, вовлеченным в процесс оказания услуг по вопросам лечения и ухода для ЛЖВ, следует предлагать все усилия для максимально раннего начала АРТ, как только в этом возникнет необходимость (при числе лимфоцитов CД4 менее 500 клеток/мкл). Раннее начало АРТ позволяет избежать возникновения таких серьезных ОИ, как ПЦП, а также таких дополнительных вмешательств, как профилактическое лечение котримоксазолом.",
+
+  "c4_1text1":"Оппортунистические инфекции (ОИ)",
+  "c4_1text2":"Оппортунистические инфекции (ОИ) – это особые заболевания, которые развиваются только при снижении иммунитета. Вирус иммунодефицита человека (ВИЧ), убивает клетки иммунной системы, в результате иммунитет снижается и присоединяются оппортунистические инфекции, которые не вызывают заболевания у человека с сильной иммунной системой. ",
+  "c4_1text3":"\n\nОсновным показателем состояния иммунной системы – является количество иммунных клеток – СД4 лимфоцитов. Снижение числа СД4  ниже 350 клеток/мкл, говорит о существенном снижении иммунитета и высоком риске возникновении оппортунистических инфекций. ",
+  "c4_1text4":"\n\nЧаще всего из ОИ встречается туберкулез, пневмоцистная пневмония, токсоплазмоз, саркома Капоши (рак кожи), грибковые поражения и другое.",
+
+  "c4_2text1":"Основные проявления ОИ:",
+  "c4_2text2":"Проявления и время проявления ОИ у каждого человека разное. У ВИЧ-позитивного человека с хорошим состоянием иммунитета, оппортунистические инфекции не возникают или протекают в легкой форме. Основные проявления:",
+  "c4_2text3":"\n - постоянная слабость, усталость, повышенная утомляемость;",
+  "c4_2text4":"\n - увеличение лимфатических узлов;",
+  "c4_2text5":"\n - потеря массы тела (исхудание);",
+  "c4_2text6":"\n - длительная лихорадка (повышение температуры тела);",
+  "c4_2text7":"\n - ночная потливость;",
+  "c4_2text8":"\n - постоянные головные боли;",
+  "c4_2text9":"\n - кашель и одышка (затрудненное дыхание);",
+  "c4_2text10":"\n - стоматит (воспаление и язвы слизистой оболочки полости рта);",
+  "c4_2text11":"\n - заболевания ЛОР-органов (ангина, отит, синусит);",
+  "c4_2text12":"\n - поражения кожи (герпес, опоясывающий лишай, грибок ногтей и др.).",
+
+  "c4_3text1":"Чем опасны оппортунистические инфекции",
+  "c4_3text2":"Оппортунистические инфекции при развитии иммунодефицита могут привести к серьезным проблемам здоровья у ВИЧ-инфицированных людей. Некоторые инфекции могут развиваться только у людей с ВИЧ (например, токсоплазмоз), другие – в сочетании с ВИЧ протекают очень тяжело и (например, туберкулез).   ОИ являются основной причиной смерти людей, живущих с ВИЧ.",
+
+  "c4_4text1":"Как предупредить развитие ОИ",
+  "c4_4text2":"Раннее начало лечения ВИЧ-инфекции АРВ препаратами, высокая приверженность к терапии является основным способом предупреждения ОИ.",
+  "c4_4text3":"\n\nПлохое питание, нарушение режима сна и отдыха, потребление алкоголя и наркотиков приводит к снижению иммунитета и повышает риск развития ОИ.",
+  "c4_4text4":"\n\nКонтакт с животными, употребление в пищу некипяченого молока, сырых яиц или плохо проваренного мяса; уход за животными; контакт с больными инфекционными заболеваниями, незащищенные половые контакты повышают риск заражения ОИ. ",
+
+  "c4_5text1":"Для сохранения здоровья нужно:",
+  "c4_5text2":"\n- пить бутилированную или кипяченую воду для профилактики кишечных инфекций;",
+  "c4_5text3":"\n- избегать контакта с людьми с инфекционными заболеваниями, часто и правильно мыть руки; носить защитную маску в общественных местах или при контакте с больными;",
+  "c4_5text4":"\n- проветривать помещение, соблюдать личную гигиену (содержать руки и тело в чистоте); регулярно гулять на свежем воздухе;",
+  "c4_5text5":"\n- женщинам с ВИЧ ежегодно проходить гинекологическое обследование, что позволит предотвратить либо вовремя выявить онкологические заболевания. ",
+  "c4_5text6":"\n- избегать стрессов, потребления алкоголя, никотина и наркотиков;",
+  "c4_5text7":"\n- получать прививки для детей и взрослых по назначению врача. Они помогут защититься от инфекций;",
+  "c4_5text8":"\n- при половых контактах всегда использовать презерватив.",
+  "c4_5text9":"\n\nОппортунистические инфекции появляются при ослаблении иммунитета. ",
+  "c4_5text10":"Поэтому важно обследоваться на СД4-клетки и своевременно получить лекарства для профилактики ОИ при низком уровне СД4. ",
+
+  "c4_6text1":"Туберкулез у людей с ВИЧ",
+  "c4_6text2":"Как передается туберкулез",
+  "c4_6text3":"\n   Туберкулез – инфекционное заболевание, передающееся от больного туберкулезом здоровому человеку при кашле, чихании и разговоре. Туберкулезом можно также заразиться через продукты (некипяченое молоко, сырые яйца, не проваренное мясо). Туберкулез является одной из причин смертности среди людей, живущих с ВИЧ.",
+  "c4_6text4":"\n\nКак проявляется туберкулез у людей с ВИЧ",
+  "c4_6text5":"\n   Туберкулез – это одна из основных оппортунистических инфекций при ВИЧ-инфекция, что связано со снижением иммунитета. У людей с ВИЧ туберкулез протекает более тяжело. При числе СД4 менее 200 клеток/мкл, туберкулез может поражать не только легкие, но также позвоночник, головной мозг, сердце, почки, кости и другие органы. Туберкулез также приводит к ухудшению течения ВИЧ-инфекции – повышению вирусной нагрузки ВИЧ, что приводит к еще большему снижению иммунитета и ухудшению здоровья. ",
+
+  "c4_7text1":"  Как проявляется туберкулез у людей с ВИЧ",
+  "c4_7text2":"\n\nК наиболее частым проявлениям туберкулеза обносятся:",
+  "c4_7text3":"\n- кашель на протяжении двух недель и более; \n- кровохарканье (появление крови в мокроте или при кашле);\n- затрудненное дыхание (одышка); \n- потеря веса (похудание); \n- повышенная температура тела (37ͦС – 37,5 ͦС и выше); \n- повышенная ночная потливость; \n- усталость, утомляемость; \n- увеличение лимфатических узлов.",
+  "c4_7text4":"\n\n  Если у человека с ВИЧ отмечается хотя бы один из таких проявлений, то следует срочно обратиться к врачу. Проводится консультация фтизиатра, рентгенологическое и лабораторное исследование мокроты.",
+
+  "c4_8text1":"Лечение туберкулеза у людей с ВИЧ",
+  "c4_8text2":"\n\n   Лечение туберкулеза следует начинать немедленно. Жизненно важно завершить полный курс лечения и строго следовать предписаниям врача",
+  "c4_8text3":"\n   Внимание: туберкулез излечим! ",
+  "c4_8text4":"При соблюдении режима лечения с момента выявления заболевания и до полного излечения,необходимо быть в контакте с врачом, вовремя проходить лабораторные исследования и ограничить контакты, чтобы не заразить близких при бытовом общении. ",
+  "c4_8text5":"\n    При выявлении ТБ сначала начинают лечить туберкулез, затем (в течение 2 недель) подключают АРВ терапию. ",
+  "c4_8text6":"\n    У людей с ВИЧ повышен риск заболеть туберкулезом и, чтобы избежать заражения, всем ЛЖВ назначается профилактическое лечение изониазидом, которое нужно принимать 6 месяцев. ",
+  "c4_8text7":"\n\nДля чего нужно принимать котримаксазол",
+  "c4_8text8":"\n\nПри сочетании туберкулеза с ВИЧ-инфекцией пациентам также назначают котримаксазол. Это препятствует развитию одной из часто встречающейся оппортунистической инфекции – пневмоцистной пневмонии. ",
+
+  "c4_9text1":"Что такое вирусные гепатиты?",
+  "c4_9text2":"\n\nПечень выполняет важные функции в организме. Гепатит – это воспаление печени в результате действия вирусов, химических веществ, алкоголя. ",
+  "c4_9text3":"\n\nНаиболее опасны вирусные гепатиты В и С. Их основные проявления – желтуха (пожелтение кожи, белков глаз, мочи), увеличение печени, боли в животе, плохой сон, быстрая утомляемость, снижение веса, плохой аппетит, тошнота. Гепатит С может протекать незаметно, но приводит к тяжелым последствиям (его еще называют «ласковый убийца»).",
+  "c4_9text4":"\n\nЛюди заражаются гепатитами В и С, также как ВИЧ, через кровь (часто при использовании загрязненных игл и шприцев). Поэтому многие ЛЖВ инфицированы также гепатитами В и С. ",
+  "c4_9text5":"\n\nРиск заражения гепатитом В значительно выше, чем ВИЧ. Вирус гепатита В очень устойчив во внешней среде. Им можно также заразиться бытовым путем при пользовании общим полотенцем, бритвенным прибором или половым путем.",
+
+  "c4_10text1":"Как выявить вирусный гепатит?",
+  "c4_10text2":"\n\nОбследование на гепатиты В и С проводится сразу после выявления ВИЧ-инфекции. ",
+  "c4_10text3":"\n\nЕсли у человека с ВИЧ сохраняется опасное поведение (секс без презерватива с разными половыми партнерами, совместное использование шприцев), то обследование проводят ежегодно.",
+  "c4_10text4":"\n\nВ случае появления признаков вирусного гепатита, сразу обратитесь к врачу, пройдите обследование и лечение.",
+  "c4_10text5":"\n\nКак защитить себя от вирусных гепатитов?\n\n",
+  "c4_10text6":"Профилактика вирусных гепатитов В и С такая же, как и для ВИЧ-инфекции. ",
+  "c4_10text7":"\n- При употреблении наркотиков, откажитесь от внутривенного использования или пользуйтесь только своим шприцом и приспособлениями для изготовления наркотика.",
+
+  "c4_11text1":"\n- При половых контактах всегда и правильно используйте презерватив.",
+  "c4_11text2":"\n- Пользуйтесь индивидуальными предметами личной гигиены (зубной щеткой, бритвенным станком, полотенцем и др.).",
+  "c4_11text3":"\n- При проведении татуировки или пирсинга, используйте одноразовые (стерильные) инструменты.",
+  "c4_11text4":"\n- От гепатита В защищает прививка, которую ЛЖВ могут получить бесплатно. ",
+  "c4_11text5":"\n\nКак жить с вирусными гепатитами?",
+  "c4_11text6":"\nВирусные гепатиты В и С нужно обязательно лечить – без лечения развиаются тяжелые осложнения (цирроз или рак печени).",
+  "c4_11text7":"\n\nЛЖВ могут бесплатно получить лечение гепатита С, ",
+  "c4_11text8":"и более 90% людей излечиваются от него.  Курс лечения длится 3-6 месяцев.",
+  "c4_11text9":"\n\nДля гепатита В также существует лечение, но оно длительное. Некоторые АРВ-препараты (тенофовир, ламивудин, эмтрицитабин) помогают в лечении гепатита В.",
+
+  "c4_12text1":"Рекомендации для больных гепатитами:",
+  "c4_12text2":"\n- ограничить чрезмерные физические нагрузки, соблюдать режим дня;",
+  "c4_12text3":"\n- не употреблять (или сильно ограничить) наркотики, алкоголь, курение;",
+  "c4_12text4":"\n- отказаться от некоторых продуктов (жирного, жаренного, острого);",
+  "c4_12text5":"\n- сообщить половому партнеру и членам семьи о своем заболевании, а также о мерах безопасности и соблюдать их.",
+  "c4_12text6":"\n- дополнительную информацию, вопросы обследования, профилактики и лечения обсуждать с врачом."
 
 }
 
